MB-18510: Fix TSAN issue in flushVB/persistVBstate

We should obtain vb_mutexes before the vb pointer so that
we can't destruct the vb in a way which races with persisteVBstate.

==================
WARNING: ThreadSanitizer: data race (pid=17551)
  Write of size 8 at 0x7d100000a5d8 by thread T8:
    #0 operator delete(void*) <null>:0 (engine_testapp+0x00000009378b)
    #1 <null> <null>:0 (libstdc++.so.6+0x0000000cd8af)
    #2 VBucket::~VBucket() src/vbucket.cc:143 (ep.so+0x0000003651c7)
    #3 RCPtr<VBucket>::~RCPtr() src/atomic.h:190 (ep.so+0x00000008bb32)
    #4 EventuallyPersistentStore::flushVBucket(unsigned short) src/ep.cc:3471 (ep.so+0x0000001d90bc)
    #5 Flusher::flushVB() src/flusher.cc:293 (ep.so+0x0000002cbf2a)
    #6 Flusher::step(GlobalTask*) src/flusher.cc:183 (ep.so+0x0000002cae83)
    #7 FlusherTask::run() src/tasks.cc:65 (ep.so+0x00000035172e)
    #8 ExecutorThread::run() src/executorthread.cc:115 (ep.so+0x0000002bdb8c)
    #9 launch_executor_thread(void*) src/executorthread.cc:33 (ep.so+0x0000002bd3b8)
    #10 CouchbaseThread::run() /home/couchbase/couchbase/platform/src/cb_pthreads.cc:54 (libplatform.so.0.1.0+0x00000000d0a6)
    #11 platform_thread_wrap(void*) /home/couchbase/couchbase/platform/src/cb_pthreads.cc:66 (libplatform.so.0.1.0+0x00000000984d)

  Previous read of size 8 at 0x7d100000a5d8 by thread T7 (mutexes: write M13525):
    #0 memcmp <null>:0 (engine_testapp+0x00000009428e)
    #1 <null> <null>:0 (libstdc++.so.6+0x0000000cd252)
    #2 KVStore::updateCachedVBState(unsigned short, vbucket_state const&) src/kvstore.cc:81 (ep.so+0x0000003ae46e)
    #3 _ZN12CouchKVStore15snapshotVBucketEtR13vbucket_stateP8CallbackIJ10KVStatsCtxEEb src/couch-kvstore/couch-kvstore.cc:980 (ep.so+0x0000003c1a5d)
    #4 EventuallyPersistentStore::persistVBState(Priority const&, unsigned short) src/ep.cc:1271 (ep.so+0x0000001c2ae1)
    #5 VBStatePersistTask::run() src/tasks.cc:88 (ep.so+0x000000351b6e)
    #6 ExecutorThread::run() src/executorthread.cc:115 (ep.so+0x0000002bdb8c)
    #7 launch_executor_thread(void*) src/executorthread.cc:33 (ep.so+0x0000002bd3b8)
    #8 CouchbaseThread::run() /home/couchbase/couchbase/platform/src/cb_pthreads.cc:54 (libplatform.so.0.1.0+0x00000000d0a6)
    #9 platform_thread_wrap(void*) /home/couchbase/couchbase/platform/src/cb_pthreads.cc:66 (libplatform.so.0.1.0+0x00000000984d)

  Mutex M13525 (0x7db40000a000) created at:
    #0 pthread_mutex_trylock <null>:0 (engine_testapp+0x000000097cb0)
    #1 __gthread_mutex_trylock(pthread_mutex_t*) /usr/bin/../lib/gcc/x86_64-linux-gnu/4.9/../../../../include/x86_64-linux-gnu/c++/4.9/bits/gthr-default.h:757 (ep.so+0x0000000983d0)
    #2 std::mutex::try_lock() /usr/bin/../lib/gcc/x86_64-linux-gnu/4.9/../../../../include/c++/4.9/mutex:146 (ep.so+0x00000009d361)
    #3 LockHolder::trylock() src/locks.h:81 (ep.so+0x00000009d1c3)
    #4 LockHolder::LockHolder(std::mutex&, bool) src/locks.h:48 (ep.so+0x00000009cb51)
    #5 EventuallyPersistentStore::persistVBState(Priority const&, unsigned short) src/ep.cc:1249 (ep.so+0x0000001c26a7)
    #6 VBStatePersistTask::run() src/tasks.cc:88 (ep.so+0x000000351b6e)
    #7 ExecutorThread::run() src/executorthread.cc:115 (ep.so+0x0000002bdb8c)
    #8 launch_executor_thread(void*) src/executorthread.cc:33 (ep.so+0x0000002bd3b8)
    #9 CouchbaseThread::run() /home/couchbase/couchbase/platform/src/cb_pthreads.cc:54 (libplatform.so.0.1.0+0x00000000d0a6)
    #10 platform_thread_wrap(void*) /home/couchbase/couchbase/platform/src/cb_pthreads.cc:66 (libplatform.so.0.1.0+0x00000000984d)

  Thread T8 'mc:writer_7' (tid=17560, running) created by main thread at:
    #0 pthread_create <null>:0 (engine_testapp+0x000000096521)
    #1 cb_create_named_thread /home/couchbase/couchbase/platform/src/cb_pthreads.cc:104 (libplatform.so.0.1.0+0x0000000096e2)
    #2 ExecutorThread::start() src/executorthread.cc:46 (ep.so+0x0000002bcff2)
    #3 ExecutorPool::_startWorkers() src/executorpool.cc:515 (ep.so+0x0000002a335a)
    #4 ExecutorPool::_registerTaskable(Taskable&) src/executorpool.cc:479 (ep.so+0x0000002a2a2e)
    #5 ExecutorPool::registerTaskable(Taskable&) src/executorpool.cc:484 (ep.so+0x0000002a3f49)
    #6 EventuallyPersistentStore::EventuallyPersistentStore(EventuallyPersistentEngine&) src/ep.cc:301 (ep.so+0x0000001b3a50)
    #7 EventuallyPersistentEngine::initialize(char const*) src/ep_engine.cc:2132 (ep.so+0x000000229b06)
    #8 EvpInitialize(engine_interface*, char const*) src/ep_engine.cc:143 (ep.so+0x000000223215)
    #9 init_engine_instance <null>:0 (libmcd_util.so.1.0.0+0x00000000e71b)

  Thread T7 'mc:writer_6' (tid=17559, running) created by main thread at:
    #0 pthread_create <null>:0 (engine_testapp+0x000000096521)
    #1 cb_create_named_thread /home/couchbase/couchbase/platform/src/cb_pthreads.cc:104 (libplatform.so.0.1.0+0x0000000096e2)
    #2 ExecutorThread::start() src/executorthread.cc:46 (ep.so+0x0000002bcff2)
    #3 ExecutorPool::_startWorkers() src/executorpool.cc:515 (ep.so+0x0000002a335a)
    #4 ExecutorPool::_registerTaskable(Taskable&) src/executorpool.cc:479 (ep.so+0x0000002a2a2e)
    #5 ExecutorPool::registerTaskable(Taskable&) src/executorpool.cc:484 (ep.so+0x0000002a3f49)
    #6 EventuallyPersistentStore::EventuallyPersistentStore(EventuallyPersistentEngine&) src/ep.cc:301 (ep.so+0x0000001b3a50)
    #7 EventuallyPersistentEngine::initialize(char const*) src/ep_engine.cc:2132 (ep.so+0x000000229b06)
    #8 EvpInitialize(engine_interface*, char const*) src/ep_engine.cc:143 (ep.so+0x000000223215)

Change-Id: I276d3dc2d46d7392659df3ca705b9ffce097da59